--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
 <body>
 <div id="app">
 <!--  <h2>안녕하세요</h2>-->
-<!--  <script src="../dist/main.js"></script> plugin 사용하므로 더이상 필요없다.-->
+<!--  <script public="../dist/main.js"></script> plugin 사용하므로 더이상 필요없다.-->
 </div>
 
-<script src="main.js"></script></body>
+</body>
 </html>
