--- a/server/src/views/index.html
+++ b/server/src/views/index.html
@@ -1,34 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>ExpressGeneratorTypeScriptApp</title>
-        <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
-    </head>
-    <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>webpack-test</title>
+</head>
+<body>
+<div id="app">
+<!--  <h2>안녕하세요</h2>-->
+</div>
 
-        <!-- Add Users -->
-        <div class="users-column add-user-col">
-            <div class="column-header">Add User:</div>
-            <div>
-                <input id="name-input" placeholder="Name">
-            </div>
-            <div>
-                <input id="email-input" placeholder="Email">
-            </div>
-            <div>
-                <button id="add-user-btn">Add</button>
-            </div>
-        </div>
-
-        <!-- Display Users -->
-        <div class="users-column">
-            <div class="column-header">Users:</div>
-            <div id="all-users-anchor"></div>
-        </div>
-
-
-
-    </body>
-    <script src="scripts/index.js"></script>
+</body>
 </html>
