feature: util 파일 활용

--- a/server/src/views/test-index.html
+++ b/server/src/views/test-index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 <div id="app">
-    <!--  <h2>안녕하세요</h2>-->
+      <h1>안녕하세요</h1>
 </div>
 
+<script src="../public/scripts/app.js"></script>
 </body>
 </html>
