feature:create card section

--- a/server/src/views/index.html
+++ b/server/src/views/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="list-body-section">
-                    <div class="create-card-section"></div>
+<!--                    <div class="create-card-section"></div>-->
                     <div class="cards-wrap">
                         <div class="card">
                             <div class="card-header-section">
