--- a/server/src/public/scss/mainPage.scss
+++ b/server/src/public/scss/mainPage.scss
@@ -36,6 +36,7 @@
           flex-direction: row;
           justify-content: space-between;
           padding: 15px 15px 0px 15px;
+          height: 25px;
 
           .list-header-left-wrap {
             display: flex;
@@ -65,7 +66,7 @@
               margin: 10px;
               font-weight: 600;
               font-size: 20px;
-
+              cursor: pointer;
             }
 
             .list-details-btn {
@@ -89,27 +90,27 @@
             display: flex;
             flex-direction: column;
 
-            .card {
-              background-color: white;
-              height: 150px;
-              border-radius: 5px;
-              margin-bottom: 15px;
-
-              .card-header-section {
-                display: flex;
-                flex-direction: row;
-                padding: 15px;
-                justify-content: space-between;
-
-                .card-title {
-
-                }
-
-                .card-del-btn {
-
-                }
-              }
-            }
+            //.card {
+            //  background-color: white;
+            //  height: 150px;
+            //  border-radius: 5px;
+            //  margin-bottom: 15px;
+            //
+            //  .card-header-section {
+            //    display: flex;
+            //    flex-direction: row;
+            //    padding: 15px;
+            //    justify-content: space-between;
+            //
+            //    .card-title {
+            //
+            //    }
+            //
+            //    .card-del-btn {
+            //
+            //    }
+            //  }
+            //}
           }
         }
       }
