--- a/server/src/views/index.html
+++ b/server/src/views/index.html
@@ -16,11 +16,11 @@
 
     <div class="body-section">
         <div class="lists-wrap">
-            <div class="add-list">
-                <div class="add-title">+ Add Card</div>
+            <div class="add-list-btn">
+                <div class="add-list-title">+ Add Card</div>
             </div>
         </div>
     </div>
 </div>
-<script src="../../public/scripts/main.js"></script></body>
+<script src="../public/scripts/main.js"></script></body>
 </html>
