--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -4,15 +4,19 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 15px;
-    height: 40px;
+    height: 50px;
     font-size: 20px;
-    background-color: black;
+    background-color: #2AC1BC;
     color: white;
 
     .todo-logo {
+      font-weight: 600;
+      font-size: 30px;
     }
 
     .menu-btn {
+      font-weight: 600;
+      font-size: 30px;
     }
   }
 
