--- a/client/scss/list.scss
+++ b/client/scss/list.scss
@@ -27,6 +27,10 @@
       .list-title {
         font-weight: 600;
         font-size: 15px;
+        &:hover {
+          color: white;
+          cursor: pointer;
+        }
 
       }
     }
