--- a/client/scss/listModal.scss
+++ b/client/scss/listModal.scss
@@ -1,5 +1,5 @@
-.card-modal-section {
-  //display: none;
+#list-modal-section {
+  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -10,17 +10,17 @@
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   //overflow: auto; /* Enable scroll if needed */
 
-  .card-modal-layer {
+  .list-modal-layer {
     display: flex;
     flex-direction: column;
     width: 500px;
-    height: 350px;
+    height: 200px;
     margin: 10% auto;
     //padding: 20px;
     border: 1px solid gray;
     border-radius: 5px;
 
-    .card-modal-header-section {
+    .list-modal-header-section {
       display: flex;
       flex-direction: row;
       height: 10%;
@@ -31,47 +31,47 @@
       line-height: 2;
       background-color: lightgray;
 
-      .card-modal-header-title {
+      .list-modal-header-title {
         font-weight: 600;
 
       }
 
-      .card-modal-close-btn {
+      .list-modal-close-btn {
 
       }
     }
 
-    .card-modal-body-section {
+    .list-modal-body-section {
       background-color: white;
       display: flex;
       flex-direction: column;
       height: 90%;
       padding: 15px;
-      .card-modal-body-title {
+      .list-modal-body-title {
         font-weight: 600;
         margin-bottom: 10px;
 
       }
 
-      .card-modal-input {
+      .list-modal-input {
         resize: vertical;
         border: 1px solid grey;
         border-radius: 5px;
         height: 75%;
         margin-bottom: 10px;
-
+        padding: 10px;
+        font-size: 15px;
       }
 
-      .card-modal-save-btn {
-        width: 100px;
+      .list-modal-update-btn {
+        width: 150px;
         padding: 7px;
         border: 1px solid #17b523;
         border-radius: 5px;
         font-weight: 600;
         background-color: #17b523;
         color: white;
-
-
+        font-size: 15px;
       }
     }
   }
