fix: 카드인풋창 패딩,글자크기 조절

--- a/client/scss/cardInput.scss
+++ b/client/scss/cardInput.scss
@@ -8,6 +8,8 @@
     background-color: white;
     resize: vertical;
     height: 80px;
+    padding: 10px;
+    font-size: 20px;
 
   }
   .btn-wrap {
