--- a/client/scss/card.scss
+++ b/client/scss/card.scss
@@ -3,6 +3,7 @@
   height: 150px;
   border-radius: 5px;
   margin-bottom: 15px;
+  animation-duration: 4s;
 
   .card-header-section {
     display: flex;
