feature:update list api

--- a/client/scss/list.scss
+++ b/client/scss/list.scss
@@ -51,7 +51,7 @@
         }
       }
 
-      .list-details-btn {
+      .list-delete-btn {
         font-weight: 600;
         font-size: 20px;
         &:hover {
