--- a/client/scss/list.scss
+++ b/client/scss/list.scss
@@ -2,8 +2,10 @@
   background-color: lightgray;
   width: 400px;
   height: 100vw;
-  margin-right: 10px;
+  margin-right: 30px;
   border-radius: 5px;
+  box-shadow: 5px 5px 5px 0px rgba(171,171,171,1);
+
 
   .list-header-section {
     display: flex;
