feature: add events to menu 27 - 동적으로 이벤트 데이터 받아서 메뉴에 추가 - 카드 추가나 삭제시 이벤트 추가

--- a/client/scss/menu.scss
+++ b/client/scss/menu.scss
@@ -64,6 +64,9 @@
           .user-action-contents {
             font-size: 18px;
             margin-bottom: 5px;
+            span{
+              color: deepskyblue;
+            }
           }
           .user-action-time {
             font-size: 15px;
