feature:add css: 리스트영역 메뉴 헤더 부분  생상변경,리스트 hover, 메뉴 상단에 text추가

--- a/client/scss/list.scss
+++ b/client/scss/list.scss
@@ -1,10 +1,13 @@
 .list {
-  background-color: lightgray;
-  width: 400px;
+  background-color: #e0e2e1;
+  width: 500px;
   height: 100vw;
   margin-right: 30px;
   border-radius: 5px;
   box-shadow: 5px 5px 5px 0px rgba(171,171,171,1);
+  &:hover {
+   border:  solid 3px #b2e7f0;
+  }
 
 
   .list-header-section {
