--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -6,7 +6,7 @@
     padding: 10px 15px;
     height: 50px;
     font-size: 20px;
-    background-color: #2AC1BC;
+    background-color: #2ecfcc;
     color: white;
 
     .todo-logo {
