--- a/client/scss/list.scss
+++ b/client/scss/list.scss
@@ -1,12 +1,13 @@
 .list {
-  background-color: #e0e2e1;
+  background-color: #eeeeee;
   width: 500px;
   height: 100vw;
   margin-right: 30px;
   border-radius: 5px;
   box-shadow: 5px 5px 5px 0px rgba(171,171,171,1);
   &:hover {
-   border:  solid 3px #b2e7f0;
+    background-color: #e1e1e1;
+    //opacity: 0.5;
   }
 
 
