--- a/client/scss/listModal.scss
+++ b/client/scss/listModal.scss
@@ -1,4 +1,4 @@
-#list-modal-section {
+#list-modal-section, #list-modal-add-section {
   display: none;
   position: fixed;
   z-index: 1;
@@ -36,7 +36,7 @@
 
       }
 
-      .list-modal-close-btn {
+      .list-modal-close-btn, .list-add-modal-close-btn {
         font-size: 20px;
         &:hover {
           color: gray;
@@ -57,7 +57,7 @@
 
       }
 
-      .list-modal-input {
+      .list-modal-input, .list-modal-add-input {
         resize: vertical;
         border: 1px solid grey;
         border-radius: 5px;
@@ -68,6 +68,21 @@
       }
 
       .list-modal-update-btn {
+        width: 150px;
+        padding: 7px;
+        border: 1px solid #17b523;
+        border-radius: 5px;
+        font-weight: 600;
+        background-color: #17b523;
+        color: white;
+        font-size: 15px;
+        &:hover {
+          color: #dfdfdf;
+          cursor: pointer;
+        }
+      }
+
+      .list-modal-save-btn {
         width: 150px;
         padding: 7px;
         border: 1px solid #17b523;
