--- a/server/src/views/login.html
+++ b/server/src/views/login.html
@@ -4,7 +4,109 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+    body {
+        background: rgb(0,130,237);
+        background: radial-gradient(circle, rgba(0,130,237,1) 0%, rgba(3,114,212,1) 50%, rgba(5,70,149,1) 100%);
+    }
+    .login-page {
+        width: 100%;
+        height: 100vw;
+        display: flex;
+        justify-content: center;
+    }
+
+    .login-section {
+        margin-top: 450px;
+        display: flex;
+        flex-direction: column;
+        align-items: center
+    }
+
+    .login-title {
+        color: white;
+        font-size: 50px;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+    .login-wrap {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user-info-wrap {
+        display: flex;
+        flex-direction: row;
+    }
+    .username{
+    width: 250px;
+    height: 40px;
+    border-radius: 10px 0px 0px 0px;
+    border: none;
+        border-right:1px solid gray;
+        padding: 10px;
+    }
+
+    .password {
+        width: 250px;
+        height: 40px;
+        border-radius: 0px 10px 0px 0px;
+        border: none;
+        padding: 10px;
+
+    }
+
+    .btn-wrap {
+        display: flex;
+        width: 540px;
+        background-color: black;
+        border-radius: 0px 0px 10px 10px;
+        justify-content: center;
+        line-height: 1.5;
+        margin-bottom: 20px;
+    }
+
+    .btn-wrap:hover {
+        background: rgb(63,94,251);
+        background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(87,38,240,1) 45%, rgba(157,70,252,1) 100%);
+    }
+
+    .sign-in-btn {
+        color: white;
+        cursor: pointer;
+        height: 60px;
+        color: white;
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 2.5;
+    }
+
+    .forgot-pw {
+        color: #c9c9c9;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+
+</style>
+
 <body>
-<h1>hello</h1>
+<div class="login-page">
+    <div class="login-section">
+        <div class="login-title">ToDo Project LogIn</div>
+        <div class="login-wrap">
+            <form class="user-info-wrap">
+                <input type="text" class="username" placeholder="     Username"/>
+                <input type="text" class="password" placeholder="     Password"/>
+            </form>
+            <div class="btn-wrap">
+                <div class="sign-in-btn">Sign In</div>
+            </div>
+        </div>
+        <div class="forgot-pw">Forgot password?</div>
+    </div>
+</div>
+
 <script src="../public/scripts/main.js"></script></body>
 </html>
