fix: ignore views" ;

--- a/server/src/views/login.html
+++ b/server/src/views/login.html
@@ -108,5 +108,5 @@
     </div>
 </div>
 
-<script src="../public/scripts/main.js"></script></body>
+<script src="../public/scripts/login.js"></script></body>
 </html>
