--- a/client/scss/listModal.scss
+++ b/client/scss/listModal.scss
@@ -17,8 +17,8 @@
     height: 200px;
     margin: 10% auto;
     //padding: 20px;
-    border: 1px solid gray;
-    border-radius: 5px;
+    //border: 1px solid gray;
+    //border-radius: 5px;
 
     .list-modal-header-section {
       display: flex;
@@ -29,7 +29,8 @@
       justify-content: space-between;
       padding: 15px;
       line-height: 2;
-      background-color: lightgray;
+      background-color: #2ecfcc;
+      border-radius: 10px 10px 0px 0px;
 
       .list-modal-header-title {
         font-weight: 600;
@@ -51,6 +52,8 @@
       flex-direction: column;
       height: 90%;
       padding: 15px;
+      border-radius: 0px 0px 10px 10px;
+
       .list-modal-body-title {
         font-weight: 600;
         margin-bottom: 10px;
@@ -70,14 +73,13 @@
       .list-modal-update-btn {
         width: 150px;
         padding: 7px;
-        border: 1px solid #17b523;
         border-radius: 5px;
         font-weight: 600;
-        background-color: #17b523;
+        background-color: #cacaca;
         color: white;
         font-size: 15px;
         &:hover {
-          color: #dfdfdf;
+          background-color: gray;
           cursor: pointer;
         }
       }
@@ -85,14 +87,13 @@
       .list-modal-save-btn {
         width: 150px;
         padding: 7px;
-        border: 1px solid #17b523;
         border-radius: 5px;
         font-weight: 600;
-        background-color: #17b523;
+        background-color: #cacaca;
         color: white;
         font-size: 15px;
         &:hover {
-          color: #dfdfdf;
+          background-color: gray;
           cursor: pointer;
         }
       }
