--- a/client/scss/list.scss
+++ b/client/scss/list.scss
@@ -1,6 +1,6 @@
 .list {
   background-color: #eeeeee;
-  width: 500px;
+  width: 460px;
   height: 100vw;
   margin-right: 30px;
   border-radius: 5px;
@@ -15,13 +15,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 15px 15px 0px 15px;
+    padding: 10px 15px 5px 15px;
     height: 45px;
+    border-bottom: 3px solid #d1d1d1;
+
 
     .list-header-left-wrap {
       display: flex;
       flex-direction: row;
       align-items: baseline;
+      //border: 2px solid #c5c8c8;
+      //border-radius: 10px;
+      //width: 355px;
 
       .cards-count {
         margin: 10px;
