--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -35,7 +35,8 @@
         justify-content: space-between;
         width: 160px;
       }
-      .menu-btn {
+      .nav-btn {
+        margin-left: 10px;
         font-weight: 600;
         font-size: 30px;
         &:hover {
